--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -5,46 +5,54 @@ SUBDIRS =
 
 AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir)
 DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN=\"BSE-TEST\" # -DG_DISABLE_CONST_RETURNS
-AM_CXXFLAGS += $(BSE_CFLAGS) $(SFI_CPPFLAGS) $(RAPICORN_CFLAGS) -DBSE_CONVENIENCE
+AM_CXXFLAGS += $(BSE_CFLAGS) $(SFI_CPPFLAGS) $(RAPICORN_CFLAGS)
 
 noinst_PROGRAMS = $(ALLTESTS)
-progs_ldadd     = ../libbse-@MAJOR@.la $(LIBBSE_LIBS)
+progs_ldadd     = ../libbse-@MAJOR@.la $(BSE_LIBS)
 
-TAPTESTS         += misctests
-misctests_SOURCES = misctests.cc
-misctests_LDADD   = $(progs_ldadd)
+TAPTESTS          += misctests
+misctests_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE
+misctests_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
+misctests_SOURCES  = misctests.cc
 
-TAPTESTS          += filtertest
-SLOWTESTS         += filtertest
-filtertest_SOURCES = filtertest.cc
-filtertest_LDADD   = $(progs_ldadd)
+TAPTESTS           += filtertest
+SLOWTESTS          += filtertest
+filtertest_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE
+filtertest_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
+filtertest_SOURCES  = filtertest.cc
 
-TAPTESTS       += testfft
-testfft_SOURCES = testfft.cc
-testfft_LDADD   = $(progs_ldadd)
+TAPTESTS        += testfft
+testfft_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE
+testfft_LDADD    = ../libbse-@MAJOR@.la
+testfft_SOURCES  = testfft.cc
 
-TAPTESTS       += testcxx
-testcxx_SOURCES = testcxx.cc
-testcxx_LDADD   = $(progs_ldadd)
+TAPTESTS        += testcxx
+testcxx_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE
+testcxx_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
+testcxx_SOURCES  = testcxx.cc
 
 TAPTESTS           += subnormals
+subnormals_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE -ffast-math
+subnormals_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
 subnormals_SOURCES  = subnormals.cc subnormals-aux.cc
-subnormals_LDADD    = $(progs_ldadd)
-subnormals_CXXFLAGS = $(AM_CXXFLAGS) -ffast-math
 
-TAPTESTS          += loophandle
-loophandle_SOURCES = loophandle.cc
-loophandle_LDADD   = $(progs_ldadd)
+TAPTESTS           += loophandle
+loophandle_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE
+loophandle_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
+loophandle_SOURCES  = loophandle.cc
 
-TAPTESTS          += blocktests
-blocktests_SOURCES = blocktests.cc
-blocktests_LDADD   = $(progs_ldadd)
+TAPTESTS           += blocktests
+blocktests_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE
+blocktests_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
+blocktests_SOURCES  = blocktests.cc
 
-TAPTESTS              += resamplehandle
-SLOWTESTS             += resamplehandle
-resamplehandle_SOURCES = resamplehandle.cc
-resamplehandle_LDADD   = $(progs_ldadd)
+TAPTESTS               += resamplehandle
+SLOWTESTS              += resamplehandle
+resamplehandle_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE
+resamplehandle_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
+resamplehandle_SOURCES  = resamplehandle.cc
 
-TAPTESTS              += firhandle
-firhandle_SOURCES      = firhandle.cc
-firhandle_LDADD        = $(progs_ldadd)
+TAPTESTS          += firhandle
+firhandle_CXXFLAGS = $(BSE_CFLAGS) -DBSE_CONVENIENCE
+firhandle_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
+firhandle_SOURCES  = firhandle.cc
