PLUGINS: fix BSE_LIBS and SFI_LIBS references
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/plugins/freeverb/Makefile.am
+++ b/plugins/freeverb/Makefile.am
@@ -10,6 +10,6 @@ plugindir = $(bselibdir)/plugins
 
 freeverb_la_SOURCES = allpass.cpp comb.cpp revmodel.cpp bsefreeverbcpp.cpp bsefreeverb.cc
 freeverb_la_LDFLAGS = $(AM_LDFLAGS) -module -avoid-version
-freeverb_la_LIBADD  = ../../bse/libbse-@MAJOR@.la $(LIBBSE_LIBS)
+freeverb_la_LIBADD  = ../../bse/libbse-@MAJOR@.la $(SFI_LIBS)
 
 plugin_LTLIBRARIES = freeverb.la
