DATA: remove rapicorn package dependency from.pc file
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/data/bse.pc.in
+++ b/data/bse.pc.in
@@ -17,7 +17,7 @@ driverdir=${bselibdir}/drivers
 
 Name: Beast & Bse
 Description: Beast - Music Synthesizer and Composer
-Requires: @BSE_PC_REQUIRE@ gobject-2.0 gmodule-2.0 rapicorn
+Requires: @BSE_PC_REQUIRE@ gobject-2.0 gmodule-2.0
 Version: @PACKAGE_VERSION@
 Libs: -L${bselibdir} -lbse-@MAJOR@ @BSE_PC_LIBS@
 Cflags: -I${bseincludedir} @BSE_PC_CFLAGS@
