BLEPOSC: use bandlimted impulses to fix cxx osc aliasing
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/plugins/bleposc/Makefile.am
+++ b/plugins/bleposc/Makefile.am
@@ -37,7 +37,7 @@ $(srcdir)/bsebleposc.cc: bsebleposc.genidl.hh
 
 # generate blepdata.hh
 bleposcdata.cc: designblep
-	./designblep > bleposcdata.cc || ( rm $@ ; exit 1 )
+	./designblep impulse > bleposcdata.cc || ( rm $@ ; exit 1 )
 
 CLEANFILES += bsebleposc.genidl.hh bleposcdata.cc
 
